--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
+    "@mui/styles": "^6.4.7",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
@@ -16,9 +17,10 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-instagram-feed": "^0.1.3-alpha",
-    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
